--- a/MageRage/MageRage.vcxproj.filters
+++ b/MageRage/MageRage.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="CEntityManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CTexture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CGame.h">
@@ -78,6 +81,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="CEntityManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="CTexture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
